<resources>
    <string name="app_name">Shopping App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map">Map</string>
    <string name="products">Products</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="settings">Settings</string>
    <string name="tools">Tools</string>
    <string name="scan_qr">Scan QR</string>
    <string name="username">username</string>
    <string name="mail">username@gmail.com</string>

    <string name="money">200$</string>
    <string name="product_were_loaded"> Have been Loaded!</string>
    <string name="best_shops_were_loaded"> Best shops for you were found!</string>
    <string name="http_bad_request">Request you entered is invalid! 400</string>
    <string name="http_no_content">No match was found! 204</string>
    <string name="http_not_found">Server is unreachable! 404</string>
    <string name="category">Category: </string>
    <string name="qr_not_valid">QR code not found or is not valid!</string>
    <string name="product_not_found">Product has not been found.</string>


    <string name="detector_error">Could not set up the detector!</string>


    <string name="food">Food</string>
    <string name="clothing">Clothing</string>
    <string name="electronics">Electronics</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="sk_language">Slovak</string>
    <string name="en_language">English</string>
    <string name="de_language">German</string>
    <string name="logout">Log Out</string>


    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
