<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_shopping_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/shopping_cart" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            android:visible="false" />
    </group>

    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_qr"
                android:icon="@drawable/ic_qr"
                android:title="@string/scan_qr" />
        </menu>
    </item>

</menu>