<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/languageSkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sk_language" />

    <Button
        android:id="@+id/languageEnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/en_language" />

    <Button
        android:id="@+id/languageDeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/de_language" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dip" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />
</LinearLayout>